<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="finance_history_month">%1$d년 %2$d월</string>
    <string name="finance_history_period">%1$s ~ %2$s</string>
    <string name="finance_chat_empty_title">내 소비, 궁금한 것부터</string>
    <string name="finance_chat_empty_body">지출 내역을 찾거나 소비 패턴을 함께 살펴보세요.</string>
    <string name="finance_chat_history">지난 대화</string>
</resources>
